name:                precisely
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/precisely#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Precisely
    , Precisely.ErrorPropagation
    , Precisely.MachinePrecision
  build-depends:
      base >= 4.7 && < 5
    , ieee754 >= 0.7.1
  default-extensions:
      Safe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/precisely
